Add optional memory allocators: mimalloc and jemallocator
- Updated Cargo.toml files across multiple crates to include optional dependencies for mimalloc and jemallocator.
- Introduced features to enable these allocators in the respective crates.
- Implemented global allocators in the lib.rs and main.rs files for each crate, allowing for dynamic memory allocation using the specified allocator based on feature flags.
- Ensured compatibility with existing code while enhancing performance through improved memory management options.

--- a/crates/licensing/Cargo.toml
+++ b/crates/licensing/Cargo.toml
@@ -19,3 +19,9 @@ serde.workspace = true
 serde_json.workspace = true
 
 ed25519-dalek = "*"
+mimalloc = { version = "*", optional = true }
+jemallocator = { version = "*", optional = true }
+
+[features]
+mimalloc = ["dep:mimalloc"]
+jemalloc = ["dep:jemallocator"]
