--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -18,3 +18,9 @@ rust-ini = { version = "0.21.0", features = ["inline-comment"], git = "https://g
 regex.workspace = true
 tracing.workspace = true
 toml_edit.workspace = true
+mimalloc = { version = "*", optional = true }
+jemallocator = { version = "*", optional = true }
+
+[features]
+mimalloc = ["dep:mimalloc"]
+jemalloc = ["dep:jemallocator"]
