--- a/crates/logging_config/Cargo.toml
+++ b/crates/logging_config/Cargo.toml
@@ -15,3 +15,9 @@ anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-appender.workspace = true
+mimalloc = { version = "*", optional = true }
+jemallocator = { version = "*", optional = true }
+
+[features]
+mimalloc = ["dep:mimalloc"]
+jemalloc = ["dep:jemallocator"]
