--- a/crates/parsa/Cargo.toml
+++ b/crates/parsa/Cargo.toml
@@ -13,6 +13,12 @@ workspace = true
 [dependencies]
 lazy_static.workspace = true
 utils.workspace = true
+mimalloc = { version = "*", optional = true }
+jemallocator = { version = "*", optional = true }
+
+[features]
+mimalloc = ["dep:mimalloc"]
+jemalloc = ["dep:jemallocator"]
 
 [dev-dependencies]
 regex.workspace = true
