--- a/crates/parsa_python_cst/Cargo.toml
+++ b/crates/parsa_python_cst/Cargo.toml
@@ -17,3 +17,9 @@ utils.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
 tracing.workspace = true
+mimalloc = { version = "*", optional = true }
+jemallocator = { version = "*", optional = true }
+
+[features]
+mimalloc = ["dep:mimalloc"]
+jemalloc = ["dep:jemallocator"]
