--- a/crates/primer/Cargo.toml
+++ b/crates/primer/Cargo.toml
@@ -16,6 +16,10 @@ test_utils.workspace = true
 
 clap.workspace = true
 logging_config.workspace = true
+mimalloc = { version = "*", optional = true }
+jemallocator = { version = "*", optional = true }
 
 [features]
 zuban_debug = ["zmypy/zuban_debug"]
+mimalloc = ["dep:mimalloc"]
+jemalloc = ["dep:jemallocator"]
