--- a/crates/scripts/Cargo.toml
+++ b/crates/scripts/Cargo.toml
@@ -15,3 +15,9 @@ workspace = true
 [dependencies]
 parsa_python.workspace = true
 zuban_python.workspace = true
+mimalloc = { version = "*", optional = true }
+jemallocator = { version = "*", optional = true }
+
+[features]
+mimalloc = ["dep:mimalloc"]
+jemalloc = ["dep:jemallocator"]
