--- a/crates/scripts/Cargo.toml
+++ b/crates/scripts/Cargo.toml
@@ -16,6 +16,8 @@ workspace = true
 parsa_python.workspace = true
 zuban_python.workspace = true
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [features]
