--- a/crates/vfs/Cargo.toml
+++ b/crates/vfs/Cargo.toml
@@ -20,6 +20,8 @@ notify.workspace = true
 glob = "*"
 same-file = "*"
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [features]
