--- a/crates/zmypy/Cargo.toml
+++ b/crates/zmypy/Cargo.toml
@@ -21,6 +21,8 @@ clap.workspace = true
 colored.workspace = true
 tracing.workspace = true
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [dev-dependencies]
