--- a/crates/zuban/Cargo.toml
+++ b/crates/zuban/Cargo.toml
@@ -19,6 +19,8 @@ anyhow.workspace = true
 clap.workspace = true
 tracing.workspace = true
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [features]
