--- a/crates/logging_config/Cargo.toml
+++ b/crates/logging_config/Cargo.toml
@@ -16,6 +16,8 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-appender.workspace = true
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [features]
