--- a/crates/parsa/Cargo.toml
+++ b/crates/parsa/Cargo.toml
@@ -14,6 +14,8 @@ workspace = true
 lazy_static.workspace = true
 utils.workspace = true
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [features]
