--- a/crates/parsa_python_cst/Cargo.toml
+++ b/crates/parsa_python_cst/Cargo.toml
@@ -18,6 +18,8 @@ num-bigint.workspace = true
 num-traits.workspace = true
 tracing.workspace = true
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [features]
