--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -14,6 +14,8 @@ workspace = true
 fnv.workspace = true
 dirs.workspace = true
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [features]
