--- a/crates/zubanls/Cargo.toml
+++ b/crates/zubanls/Cargo.toml
@@ -34,6 +34,8 @@ serial_test = "*"
 fluent-uri = "0.1.4"
 urlencoding = "*"
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [dev-dependencies]
