--- a/crates/parsa_python/Cargo.toml
+++ b/crates/parsa_python/Cargo.toml
@@ -15,6 +15,8 @@ parsa.workspace = true
 lazy_static.workspace = true
 regex.workspace = true
 mimalloc = { version = "*", optional = true }
+
+[target.'cfg(target_env = "gnu")'.dependencies]
 jemallocator = { version = "*", optional = true }
 
 [features]
